@@ -37,7 +37,7 @@ public class ExpandMessagesMacro extends BasicMacro {
 
     @Override
     protected void verifyArguments(CompilationContext compilationContext, Position position, List<Class<?>> args) {
-        if (args.size() != 1 || !CompilationContext.isAssignableTo(args.get(0), String.class)) {
+        if (args.size() != 1 || !CompilationContext.isAssignableTo(args.getFirst(), String.class)) {
             throw new IllegalArgumentException("Expected a single String as argument.");
         }
     }
