@@ -38,7 +38,7 @@ public class InlineSvgMacro extends XmlProcessingMacro {
 
     @Override
     protected void verifyArguments(CompilationContext compilationContext, Position position, List<Class<?>> args) {
-        if (args.size() != 1 || !CompilationContext.isAssignableTo(args.get(0), String.class)) {
+        if (args.size() != 1 || !CompilationContext.isAssignableTo(args.getFirst(), String.class)) {
             throw new IllegalArgumentException("Expected a single String as argument.");
         }
     }
@@ -47,8 +47,8 @@ public class InlineSvgMacro extends XmlProcessingMacro {
     public void verify(CompilationContext context, Position position, List<Node> args) {
         super.verify(context, position, args);
 
-        if (args.get(0).isConstant()) {
-            String resourceName = String.valueOf(args.get(0).getConstantValue());
+        if (args.getFirst().isConstant()) {
+            String resourceName = String.valueOf(args.getFirst().getConstantValue());
             if (resources.resolve(resourceName).isEmpty()) {
                 context.warning(position, "Unknown resource: %s", resourceName);
             }
@@ -57,7 +57,7 @@ public class InlineSvgMacro extends XmlProcessingMacro {
 
     @Override
     public boolean isConstant(CompilationContext context, List<Node> args) {
-        return args.get(0).isConstant();
+        return args.getFirst().isConstant();
     }
 
     @Override
