@@ -336,7 +336,7 @@ public class SAMLHelper {
 
             for (XMLStructure xmlStructure : keyInfo.getContent()) {
                 if (xmlStructure instanceof X509Data x509Data && !x509Data.getContent().isEmpty()) {
-                    X509Certificate x509Certificate = (X509Certificate) x509Data.getContent().get(0);
+                    X509Certificate x509Certificate = (X509Certificate) x509Data.getContent().getFirst();
                     return new X509CertificateResult(x509Certificate);
                 }
             }
@@ -369,4 +369,3 @@ public class SAMLHelper {
         }
     }
 }
-
